Fix rpms for npm
Signed-off-by: savitaashture <sashture@redhat.com>

--- a/openshift/rpms/rpms.in.yaml
+++ b/openshift/rpms/rpms.in.yaml
@@ -1,4 +1,8 @@
 contentOrigin:
   repofiles:
     - ./ubi.repo
-packages: [shadow-utils]
+packages:
+  - shadow-utils
+  - openssh-clients
+  - git
+  - git-lfs
