--- a/.tekton/tektoncd-hub-main-hub-ui-push.yaml
+++ b/.tekton/tektoncd-hub-main-hub-ui-push.yaml
@@ -35,7 +35,7 @@ spec:
     value: "true"
   - name: prefetch-input
     value: |
-      {"type": "rpm", "path": "openshift/rpms"}
+      {"type": "npm", "path": "openshift/npms"}
   pipelineRef:
     name: docker-build
   workspaces:
