update dockerfile to fix ui image build
update nodejs version to nodejs-18 to fix structuredClone is not defined
update files under .tekton to include npm type
update dockerfile to fix ui image build

Signed-off-by: savitaashture <sashture@redhat.com>

--- a/.tekton/tektoncd-hub-main-hub-ui-pull-request.yaml
+++ b/.tekton/tektoncd-hub-main-hub-ui-pull-request.yaml
@@ -38,7 +38,7 @@ spec:
     value: "true"
   - name: prefetch-input
     value: |
-      {"type": "npm", "path": "openshift/npms"}
+      {"type": "npm", "path": "upstream/ui"}
   pipelineRef:
     name: docker-build
   workspaces:
