--- a/.tekton/tektoncd-hub-main-hub-ui-push.yaml
+++ b/.tekton/tektoncd-hub-main-hub-ui-push.yaml
@@ -30,6 +30,12 @@ spec:
     value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-main/hub-ui:{{revision}}
   - name: dockerfile
     value: openshift/dockerfiles/hub-ui.Dockerfile
+  - name: build-platforms
+    value:
+      - linux/x86_64
+      - linux-m2xlarge/arm64
+      - linux/ppc64le
+      - linux/s390x
   - name: prefetch-input
     value: |
       {"type": "npm", "path": "upstream/ui"}
