--- a/.tekton/tektoncd-hub-next-db-migration-pull-request.yaml
+++ b/.tekton/tektoncd-hub-next-db-migration-pull-request.yaml
@@ -5,20 +5,21 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/openshift-pipelines/tektoncd-hub?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
+    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main" &&
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
+      == "next" &&
       ("upstream/***".pathChanged() || ".konflux/patches/***".pathChanged() || ".konflux/rpms/***".pathChanged() ||
       ".konflux/dockerfiles/db-migration.Dockerfile".pathChanged() ||
-      ".tekton/tektoncd-hub-main-db-migration-push.yaml".pathChanged() ||
+      ".tekton/tektoncd-hub-next-db-migration-pull-request.yaml".pathChanged() ||
       ".tekton/docker-build-ta.yaml".pathChanged())
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: tektoncd-hub-main
-    appstudio.openshift.io/component: tektoncd-hub-main-db-migration
+    appstudio.openshift.io/application: tektoncd-hub-next
+    appstudio.openshift.io/component: tektoncd-hub-next-db-migration
     pipelines.appstudio.openshift.io/type: build
-  name: tektoncd-hub-main-db-migration-on-push
+  name: tektoncd-hub-next-db-migration-on-pull-request
   namespace: tekton-ecosystem-tenant
 spec:
   params:
@@ -27,9 +28,14 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-main/db-migration:{{revision}}
+    value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-next/db-migration:on-pr-{{revision}}
+  - name: image-expires-after
+    value: 5d
   - name: dockerfile
     value: .konflux/dockerfiles/db-migration.Dockerfile
+  - name: build-platforms
+    value:
+      - linux/x86_64
   - name: prefetch-input
     value: |
       {"type": "rpm", "path": ".konflux/rpms"}
