--- a/.tekton/tektoncd-hub-next-db-migration-push.yaml
+++ b/.tekton/tektoncd-hub-next-db-migration-push.yaml
@@ -5,21 +5,20 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/openshift-pipelines/tektoncd-hub?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
-    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main" &&
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
+      == "next" &&
       ("upstream/***".pathChanged() || ".konflux/patches/***".pathChanged() || ".konflux/rpms/***".pathChanged() ||
-      ".konflux/dockerfiles/hub-ui.Dockerfile".pathChanged() ||
-      ".tekton/tektoncd-hub-main-hub-ui-pull-request.yaml".pathChanged() ||
+      ".konflux/dockerfiles/db-migration.Dockerfile".pathChanged() ||
+      ".tekton/tektoncd-hub-next-db-migration-push.yaml".pathChanged() ||
       ".tekton/docker-build-ta.yaml".pathChanged())
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: tektoncd-hub-main
-    appstudio.openshift.io/component: tektoncd-hub-main-hub-ui
+    appstudio.openshift.io/application: tektoncd-hub-next
+    appstudio.openshift.io/component: tektoncd-hub-next-db-migration
     pipelines.appstudio.openshift.io/type: build
-  name: tektoncd-hub-main-hub-ui-on-pull-request
+  name: tektoncd-hub-next-db-migration-on-push
   namespace: tekton-ecosystem-tenant
 spec:
   params:
@@ -28,17 +27,12 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-main/hub-ui:on-pr-{{revision}}
-  - name: image-expires-after
-    value: 5d
+    value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-next/db-migration:{{revision}}
   - name: dockerfile
-    value: .konflux/dockerfiles/hub-ui.Dockerfile
-  - name: build-platforms
-    value:
-      - linux/x86_64
+    value: .konflux/dockerfiles/db-migration.Dockerfile
   - name: prefetch-input
     value: |
-      {"type": "npm", "path": "upstream/ui"}
+      {"type": "rpm", "path": ".konflux/rpms"}
   pipelineRef:
     name: docker-build-ta
   workspaces:
