--- a/.tekton/tektoncd-hub-next-hub-api-pull-request.yaml
+++ b/.tekton/tektoncd-hub-next-hub-api-pull-request.yaml
@@ -9,17 +9,17 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main" &&
+      == "next" &&
       ("upstream/***".pathChanged() || ".konflux/patches/***".pathChanged() || ".konflux/rpms/***".pathChanged() ||
       ".konflux/dockerfiles/hub-api.Dockerfile".pathChanged() ||
-      ".tekton/tektoncd-hub-main-hub-api-pull-request.yaml".pathChanged() ||
+      ".tekton/tektoncd-hub-next-hub-api-pull-request.yaml".pathChanged() ||
       ".tekton/docker-build-ta.yaml".pathChanged())
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: tektoncd-hub-main
-    appstudio.openshift.io/component: tektoncd-hub-main-hub-api
+    appstudio.openshift.io/application: tektoncd-hub-next
+    appstudio.openshift.io/component: tektoncd-hub-next-hub-api
     pipelines.appstudio.openshift.io/type: build
-  name: tektoncd-hub-main-hub-api-on-pull-request
+  name: tektoncd-hub-next-hub-api-on-pull-request
   namespace: tekton-ecosystem-tenant
 spec:
   params:
@@ -28,7 +28,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-main/hub-api:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-next/hub-api:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: dockerfile
