--- a/.tekton/tektoncd-hub-next-hub-api-push.yaml
+++ b/.tekton/tektoncd-hub-next-hub-api-push.yaml
@@ -30,6 +30,10 @@ spec:
     value: quay.io/redhat-user-workloads/tekton-ecosystem-tenant/tektoncd-hub-next/hub-api:{{revision}}
   - name: dockerfile
     value: .konflux/dockerfiles/hub-api.Dockerfile
+  - name: build-platforms
+    value:
+    - linux/x86_64
+    - linux-m2xlarge/arm64
   - name: prefetch-input
     value: |
       {"type": "rpm", "path": ".konflux/rpms"}
