--- a/.tekton/docker-build-ta.yaml
+++ b/.tekton/docker-build-ta.yaml
@@ -10,7 +10,7 @@ spec:
     This pipeline is pushed as a Tekton bundle to [quay.io](https://quay.io/repository/konflux-ci/tekton-catalog/pipeline-docker-build-multi-platform-oci-ta?tab=tags)_
   params:
   - default:
-    - linux/arm64
+    - linux-m2xlarge/arm64
     - linux/ppc64le
     - linux/s390x
     - linux/x86_64
