--- a/.tekton/tektoncd-hub-main-hub-ui-pull-request.yaml
+++ b/.tekton/tektoncd-hub-main-hub-ui-pull-request.yaml
@@ -36,6 +36,7 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
+    - linux-m2xlarge/arm64
   - name: prefetch-input
     value: |
       {"type": "npm", "path": "upstream/ui"}
