--- a/.tekton/tektoncd-hub-1-18-hub-ui-push.yaml
+++ b/.tekton/tektoncd-hub-1-18-hub-ui-push.yaml
@@ -34,6 +34,15 @@ spec:
   - name: prefetch-input
     value: |
       {"type": "npm", "path": "upstream/ui"}
+  taskRunSpecs:
+    - pipelineTaskName: build-images
+      stepSpecs:
+        - name: build
+          computeResources:
+            requests:
+              memory: 10Gi
+            limits:
+              memory: 10Gi
   pipelineRef:
     name: docker-build-ta
   workspaces:
