--- a/.konflux/rpms/rpms.in.yaml
+++ b/.konflux/rpms/rpms.in.yaml
@@ -1,11 +1,7 @@
 contentOrigin:
   repofiles:
     - ./ubi.repo
-packages:
-  - shadow-utils
-  - openssh-clients
-  - git
-  - git-lfs
+packages: [openssl-libs-3.2.2-6.el9_5.1, libxml2-2.9.13-6.el9_5.1, openssl-3.2.2-6.el9_5.1]
 arches:
   # The list of architectures
   - aarch64
