--- a/.tekton/tektoncd-hub-1-18-hub-ui-pull-request.yaml
+++ b/.tekton/tektoncd-hub-1-18-hub-ui-pull-request.yaml
@@ -39,7 +39,7 @@ spec:
     - linux/x86_64
   - name: prefetch-input
     value: |
-      {"type": "npm", "path": "upstream/ui"}
+      [{"type": "npm", "path": "upstream/ui"}, {"type": "rpm", "path": ".konflux/rpms"}]
   pipelineRef:
     name: docker-build-ta
   workspaces:
