--- a/.tekton/tektoncd-hub-1-18-hub-ui-push.yaml
+++ b/.tekton/tektoncd-hub-1-18-hub-ui-push.yaml
@@ -33,16 +33,7 @@ spec:
     value: .konflux/dockerfiles/hub-ui.Dockerfile
   - name: prefetch-input
     value: |
-      {"type": "npm", "path": "upstream/ui"}
-  taskRunSpecs:
-    - pipelineTaskName: build-images
-      stepSpecs:
-        - name: build
-          computeResources:
-            requests:
-              memory: 10Gi
-            limits:
-              memory: 10Gi
+      [{"type": "npm", "path": "upstream/ui"}, {"type": "rpm", "path": ".konflux/rpms"}]
   pipelineRef:
     name: docker-build-ta
   workspaces:
