--- a/.konflux/rpms/rpms.in.yaml
+++ b/.konflux/rpms/rpms.in.yaml
@@ -1,7 +1,7 @@
 contentOrigin:
   repofiles:
     - ./ubi.repo
-packages: [shadow-utils]
+packages: [openssh-clients, git, shadow-utils]
 arches:
   # The list of architectures
   - aarch64
