[1-18-1]Fix git-clone issue in hub
Signed-off-by: savitaashture <sashture@redhat.com>

--- a/.konflux/rpms/rpms.in.yaml
+++ b/.konflux/rpms/rpms.in.yaml
@@ -1,7 +1,7 @@
 contentOrigin:
   repofiles:
     - ./ubi.repo
-packages: [openssl-libs-3.2.2-6.el9_5.1, libxml2-2.9.13-6.el9_5.1, openssl-3.2.2-6.el9_5.1]
+packages: [openssh-clients, git, shadow-utils]
 arches:
   # The list of architectures
   - aarch64
